[package]
name = "tystab"
version = "0.1.0"
authors = ["Borodin Gregory <grihabor@yandex-team.ru>"]
edition = "2018"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.5"
quote = "1.0.2"

[lib]
proc-macro = true
